Addresses some issues revealed by Sonar Cloud